--- a/src/TechFreakSharp.MSTestExtensions/TechFreakSharp.MSTestExtensions.csproj
+++ b/src/TechFreakSharp.MSTestExtensions/TechFreakSharp.MSTestExtensions.csproj
@@ -22,9 +22,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Include="README.md" Pack="true" PackagePath="\"/>
-    <None Include="LICENSE" Pack="true" PackagePath="\"/>
-    <None Include="icon.png" Pack="true" PackagePath="\"/>
+    <None Include="..\..\README.md" Link="README.md" Pack="true" PackagePath="\" />
+    <None Include="icon.png" Pack="true" PackagePath="\" />
   </ItemGroup>
 
   <ItemGroup>
