--- a/.github/workflows/ci-package.yml
+++ b/.github/workflows/ci-package.yml
@@ -20,6 +20,8 @@ jobs:
         dotnet-version: 6.0.x
     - name: Restore dependencies
       run: dotnet restore
+    - name: Test
+      run: dotnet test --no-restore
     - name: Pack
       run: dotnet pack --no-restore
     - name: Upload a Build Artifact
