--- a/src/TechFreakSharp.MSTestExtensions.Test/TechFreakSharp.MSTestExtensions.Test.csproj
+++ b/src/TechFreakSharp.MSTestExtensions.Test/TechFreakSharp.MSTestExtensions.Test.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\src\TechFreakSharp.MSTestExtensions\TechFreakSharp.MSTestExtensions.csproj" />
+    <ProjectReference Include="..\TechFreakSharp.MSTestExtensions\TechFreakSharp.MSTestExtensions.csproj" />
   </ItemGroup>
 
 </Project>
